# mc_impact_predictor

./: .gitmodules  CMakeLists.txt  license-txt
CMakeModules/: Findnlopt.cmake
include/: ImpactDynamicsModelInterface.h  mi_balance.h  mi_contactConstraint.h  mi_equality.h  mi_fid_impulse.h  mi_frictionCone.h  mi_impactModel.h  mi_impactPredictor.h  mi_inEquality.h  mi_iniEquality.h  mi_invOsdEquality.h  mi_jsdEquality.h  mi_lcp.h  mi_multiImpactPredictor.h  mi_osd.h  mi_osdEquality.h  mi_qpEstimator.h  mi_unilateralContactConstraint.h  mi_utils.h  mi_velBalance.h  mi_velEstimator.h  mi_velIniEquality.h  mi_velInvOsdEquality.h  mi_velJsdEquality.h
include/ImpactDynamics/: ImpactDynamicsModelInterface.h  McImpactDynamicsModelInterface.h  OneDimImpactModel.h  utils.h
src/: CMakeLists.txt  ImpactDynamicsModelInterface.cpp  McImpactDynamicsModelInterface.cpp  OneDimImpactModel.cpp  mi_balance.cpp  mi_contactConstraint.cpp  mi_fid_impulse.cpp  mi_frictionCone.cpp  mi_impactModel.cpp  mi_impactPredictor.cpp  mi_iniEquality.cpp  mi_invOsdEquality.cpp  mi_jsdEquality.cpp  mi_lcp.cpp  mi_multiImpactPredictor.cpp  mi_osd.cpp  mi_osdEquality.cpp  mi_qpEstimator.cpp  mi_unilateralContactConstraint.cpp  mi_velBalance.cpp  mi_velEstimator.cpp  mi_velIniEquality.cpp  mi_velInvOsdEquality.cpp  mi_velJsdEquality.cpp
